# RESTful_Infrastructure

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
server/: README.md  conflog.py  frontend.py  main.py  pyproject.toml  requirements.txt  test_database.py  vehicle_data.db
server/api/: README.md  api.py  schemas.py
server/database/: README.md  datatypes.py  models.py  monitoring.py  repository.py  schemas.py  session.py
server/tests/: README.md  conftest.py  test_database_repositories.py
vehicle_client/: .clang-format  CMakeLists.txt  README.md  main.cpp
vehicle_client/include/: DataTypes.hpp  SensorType.hpp  VehicleClient.hpp
vehicle_client/src/: VehicleClient.cpp  main.cpp
