[project]
name = "server"
version = "0.1.0"
description = "This will be the server for RESTful infrastructure."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.4",
    "pendulum>=3.0.0",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "reorder-python-imports>=3.14.0",
    "ruff>=0.7.1",
]
test = [
    "pytest>=8.3.3",
]
