[project]
name = "server"
version = "0.1.0"
description = "This will be the server for RESTful infrastructure."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "concurrent-log-handler>=0.9.25",
    "email-validator>=2.2.0",
    "fastapi>=0.115.4",
    "pendulum>=3.0.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.1",
    "pytest>=8.3.3",
]
